--- a/mzday3/projectone/index.html
+++ b/mzday3/projectone/index.html
@@ -8,25 +8,86 @@
 </head>
 <body>
     <div class="top">
-        <div class="header">
-            <div>Header Logo</div>
-            <ul>
-                <li><a href="hehe"> header link one</a></li>
-                <li><a href="hehe"> header link two</a></li>
-                <li><a href="hehe"> header link three</a></li>
-            </ul>
-        </div> 
-        <div class="intro">
-            <div class="right">
-                <h2>This website is <br>awesome</h2>
-                <p>This website has some subtext that goes here under the <br> main title. it's a smaller font and the color is lower <br> contrast</p>
-                <button>Sign up</button>         
+        <div class="top-content">
+            <div class="header">
+                <div>Header Logo</div>
+                <ul>
+                    <li><a href="hehe"> header link one</a></li>
+                    <li><a href="hehe"> header link two</a></li>
+                    <li><a href="hehe"> header link three</a></li>
+                </ul>
+            </div> 
+            <div class="intro">
+                <div class="left">
+                    <h2>This website is <br>awesome</h2>
+                    <p>This website has some subtext that goes here under the <br> main title. it's a smaller font and the color is lower <br> contrast</p>
+                    <button>Sign up</button>         
+                </div>
+                <div class="right">
+                    <img src="https://imgs.search.brave.com/-iO1Ipop8UJlU0s7DjHK9FyjjU8f0ayVQFd8zARY_34/rs:fit:500:0:0/g:ce/aHR0cHM6Ly9pbWFn/ZXMudW5zcGxhc2gu/Y29tL3Bob3RvLTE1/NzQxNjkyMDg1MDct/ODQzNzYxNDQ4NDhi/P3E9ODAmdz0xMDAw/JmF1dG89Zm9ybWF0/JmZpdD1jcm9wJml4/bGliPXJiLTQuMC4z/Jml4aWQ9TTN3eE1q/QTNmREI4TUh4elpX/RnlZMmg4Tm54OGFX/MWhaMlY4Wlc1OE1I/eDhNSHg4ZkRBPQ.jpeg" alt="this is a placeholder for an image">
+                </div>
             </div>
-            <div class="left">
-                <img  style="height: 150px; width: 300px;" src="https://imgs.search.brave.com/-iO1Ipop8UJlU0s7DjHK9FyjjU8f0ayVQFd8zARY_34/rs:fit:500:0:0/g:ce/aHR0cHM6Ly9pbWFn/ZXMudW5zcGxhc2gu/Y29tL3Bob3RvLTE1/NzQxNjkyMDg1MDct/ODQzNzYxNDQ4NDhi/P3E9ODAmdz0xMDAw/JmF1dG89Zm9ybWF0/JmZpdD1jcm9wJml4/bGliPXJiLTQuMC4z/Jml4aWQ9TTN3eE1q/QTNmREI4TUh4elpX/RnlZMmg4Tm54OGFX/MWhaMlY4Wlc1OE1I/eDhNSHg4ZkRBPQ.jpeg" alt="this is a placeholder for an image">
+    </div>
+    </div>
+    <div class="first-body">
+        <h3 style="font-weight: 800;font-size: larger; font-family: sans-serif;">Some random information.</h3>
+        <div class="four-blocks">
+            <div class="box">
+                <div class="inner-box"></div>
+                <p class="body-text">this is some subtext <br> 
+                    under an illustraion <br> 
+                    or image
+                </p>
+            </div>
+            <div class="box">
+                <div class="inner-box"></div>
+                <p class="body-text">this is some subtext <br>
+                    under an illustraion <br> 
+                    or image
+                </p>
+            </div>
+            <div class="box">
+                <div class="inner-box"></div>
+                <p class="body-text">this is some subtext <br>
+                     under an illustraion <br> 
+                     or image
+                </p>
+            </div>
+            <div class="box">
+                <div class="inner-box" ></div>
+                <p class="body-text">this is some subtext <br> 
+                    under an illustraion <br> 
+                    or image
+                </p>
             </div>
         </div>
+    </div>
+    <div class="second-body">
+        <div class="para">
+            <p id="second-body-text">This is an inspiring quote or a testimonial from a <br>
+                customer . Maybe its just filing up space, or maybe<br> 
+                people will actually read it.who knows? All I know <br> 
+                is that it looks nice.
+            </p>
+        </div>
+        <div class="quotation">
+            <p id="thor">-Thor, God of Thunder</p>
+        </div>
+    </div>
+    <div class="bottom">
+        <div class="section">
+            <div class="content">
+                <div class="subcontent">
+                    <h4>call to action! It's time!</h4>
+                    <p id="bottom-para">Sign up for our product by clicking that button right over there!</p>
 
+                </div>
+                <button class="button">Sign up</button>
+            </div>
+        </div>
+        <div class="footer">
+            <p id="copyright">Copyright &copy The Odin Project 2021</p>
+        </div>
     </div>
 </body>
 </html>
