complete project0ne

--- a/mzday3/projectone/index.html
+++ b/mzday3/projectone/index.html
@@ -20,8 +20,8 @@
             <div class="intro">
                 <div class="left">
                     <h2>This website is <br>awesome</h2>
-                    <p>This website has some subtext that goes here under the <br> main title. it's a smaller font and the color is lower <br> contrast</p>
-                    <button>Sign up</button>         
+                    <p id="header-para">This website has some subtext that goes here under the <br> main title. it's a smaller font and the color is lower <br> contrast</p>
+                    <button id="header-button">Sign up</button>         
                 </div>
                 <div class="right">
                     <img src="https://imgs.search.brave.com/-iO1Ipop8UJlU0s7DjHK9FyjjU8f0ayVQFd8zARY_34/rs:fit:500:0:0/g:ce/aHR0cHM6Ly9pbWFn/ZXMudW5zcGxhc2gu/Y29tL3Bob3RvLTE1/NzQxNjkyMDg1MDct/ODQzNzYxNDQ4NDhi/P3E9ODAmdz0xMDAw/JmF1dG89Zm9ybWF0/JmZpdD1jcm9wJml4/bGliPXJiLTQuMC4z/Jml4aWQ9TTN3eE1q/QTNmREI4TUh4elpX/RnlZMmg4Tm54OGFX/MWhaMlY4Wlc1OE1I/eDhNSHg4ZkRBPQ.jpeg" alt="this is a placeholder for an image">
@@ -85,9 +85,9 @@
                 <button class="button">Sign up</button>
             </div>
         </div>
-        <div class="footer">
-            <p id="copyright">Copyright &copy The Odin Project 2021</p>
-        </div>
+    </div>
+    <div class="footer">
+        <p id="copyright">Copyright &copy The Odin Project 2021</p>
     </div>
 </body>
 </html>
